force-app/main/default/objects/Case_Comment__c/Case_Comment__c.object-meta.xml
<CustomObject>
    <description>Custom Case Comments to allow custom fields.</description>
    <label>Case Comment</label>
    <nameField>
        <label>Case Comment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>