force-app/main/default/objects/Case_Comment__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>General - Standard customer communications
Technical - Technical issues and solutions
Billing - Payment and billing-related comments
Follow-up - Scheduled follow-up actions
Escalation - High-priority or escalated issues</description>
    <inlineHelpText>General - Standard customer communications
Technical - Technical issues and solutions
Billing - Payment and billing-related comments
Follow-up - Scheduled follow-up actions
Escalation - High-priority or escalated issues</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>